--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="header-btm">
-                <p>LIMITED TIME OFFER: Buy Any 2 Items and Get Additional 50% OFF on Your Third Item</p>
+                <p>LIMITED TIME OFFER: Buy Any 2 Items and Get Additional 50% OFF on Your Third Item!!!</p>
             </div>
         </div>
         <img id="home" src="images/Banner.png" alt="YC Thrift Banner">
@@ -51,8 +51,8 @@
             <div class="featured-items-container">
                 <div class="featured-items">
                     <div class="featured-item">
-                        <div class="new-tag">95% New</div>
-                        <div class="sold-tag">Sold Out</div>
+                        <div class="new-tag">95% NEW</div>
+                        <div class="sold-tag">SOLD</div>
                         <div class="featured-img-container">
                             <img src="images/shop-items/sports/ASTROX100ZZ.png" alt="">
                         </div>
@@ -70,7 +70,7 @@
                     </div>
 
                     <div class="featured-item">
-                        <div class="brand-new-tag">Brand New</div>
+                        <div class="brand-new-tag">BRAND NEW</div>
                         <div class="status-tag">-60%</div>
                         <div class="featured-img-container">
                             <img src="images/shop-items/sports/NANORAY80FX.png" alt="">
@@ -89,7 +89,7 @@
                     </div>
 
                     <div class="featured-item">
-                        <div class="new-tag">95% New</div>
+                        <div class="new-tag">95% NEW</div>
                         <div class="status-tag">-60%</div>
                         <div class="featured-img-container">
                             <img src="images/shop-items/sports/Badminton Bag.png" alt="">
@@ -108,7 +108,7 @@
                     </div>
 
                     <div class="featured-item">
-                        <div class="new-tag">90% New</div>
+                        <div class="new-tag">90% NEW</div>
                         <div class="status-tag">-70%</div>
                         <div class="featured-img-container">
                             <img src="images/shop-items/sweaters/UBC Hoodie.png" alt="">
@@ -127,7 +127,7 @@
                     </div>
 
                     <div class="featured-item">
-                        <div class="brand-new-tag">Brand New</div>
+                        <div class="brand-new-tag">BRAND NEW</div>
                         <div class="status-tag">-75%</div>
                         <div class="featured-img-container">
                             <img src="images/shop-items/sweaters/Cat Sweater.png" alt="">
@@ -146,7 +146,7 @@
                     </div>
 
                     <div class="featured-item">
-                        <div class="new-tag">70% New</div>
+                        <div class="new-tag">70% NEW</div>
                         <div class="status-tag">-80%</div>
                         <div class="featured-img-container">
                             <img src="images/shop-items/others/Rice Cooker.png" alt="">
@@ -165,7 +165,7 @@
                     </div>
 
                     <div class="featured-item">
-                        <div class="new-tag">90% New</div>
+                        <div class="new-tag">90% NEW</div>
                         <div class="status-tag">-70%</div>
                         <div class="featured-img-container">
                             <img src="images/shop-items/others/Pencil Sharpeners.png" alt="">
@@ -184,7 +184,7 @@
                     </div>
 
                     <div class="featured-item">
-                        <div class="new-tag">90% New</div>
+                        <div class="new-tag">90% NEW</div>
                         <div class="status-tag">-80%</div>
                         <div class="featured-img-container">
                             <img src="images/shop-items/others/Hole Puncher.png" alt="">
@@ -203,7 +203,7 @@
                     </div>
 
                     <div class="featured-item">
-                        <div class="brand-new-tag">Brand New</div>
+                        <div class="brand-new-tag">BRAND NEW</div>
                         <div class="status-tag">-30%</div>
                         <div class="featured-img-container">
                             <img src="images/shop-items/others/CATAN.png" alt="">
@@ -235,8 +235,8 @@
         <div class="sports-content">
             <div class="basic-items-container">
                 <div class="basic-item">
-                    <div class="new-tag">95% New</div>
-                    <div class="sold-tag"">Sold Out</div>
+                    <div class="new-tag">95% NEW</div>
+                    <div class="sold-tag"">SOLD</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/sports/ASTROX100ZZ.png" alt=""">
                     </div>
@@ -254,7 +254,7 @@
                 </div>
 
                 <div class="basic-item">
-                    <div class="new-tag">95% New</div>
+                    <div class="new-tag">95% NEW</div>
                     <div class="status-tag"">-45%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/sports/ASTROX99GAME.png" alt="">
@@ -273,7 +273,7 @@
                 </div>
 
                 <div class="basic-item">
-                    <div class="brand-new-tag">Brand New</div>
+                    <div class="brand-new-tag">BRAND NEW</div>
                     <div class="status-tag">-60%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/sports/NANORAY80FX.png" alt="">
@@ -292,7 +292,7 @@
                 </div>
 
                 <div class="basic-item">
-                    <div class="new-tag">95% New</div>
+                    <div class="new-tag">95% NEW</div>
                     <div class="status-tag">-60%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/sports/Badminton Bag.png" alt="">
@@ -311,7 +311,7 @@
                 </div>
 
                 <div class="basic-item">
-                    <div class="new-tag">95% New</div>
+                    <div class="new-tag">95% NEW</div>
                     <div class="status-tag">-65%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/sports/Hello Kitty.png" alt="">
@@ -330,7 +330,7 @@
                 </div>
 
                 <div class="basic-item">
-                    <div class="new-tag">90% New</div>
+                    <div class="new-tag">90% NEW</div>
                     <div class="status-tag">-60%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/sports/Head.png" alt="Head">
@@ -357,7 +357,7 @@
         <div class="sweaters-content">
             <div class="basic-items-container">
                 <div class="basic-item">
-                    <div class="new-tag">90% New</div>
+                    <div class="new-tag">90% NEW</div>
                     <div class="status-tag">-80%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/sweaters/Black Rain Jacket.png" alt="">
@@ -376,7 +376,7 @@
                 </div>
 
                 <div class="basic-item">
-                    <div class="brand-new-tag">Brand New</div>
+                    <div class="brand-new-tag">BRAND NEW</div>
                     <div class="status-tag">-55%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/sweaters/Body Rain Coat.png" alt="">
@@ -395,7 +395,7 @@
                 </div>
 
                 <div class="basic-item">
-                    <div class="new-tag">90% New</div>
+                    <div class="new-tag">90% NEW</div>
                     <div class="status-tag">-70%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/sweaters/UBC Hoodie.png" alt="">
@@ -414,7 +414,7 @@
                 </div>
 
                 <div class="basic-item">
-                    <div class="new-tag">85% New</div>
+                    <div class="new-tag">85% NEW</div>
                     <div class="status-tag">-80%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/sweaters/UBC Sweater.png" alt="">
@@ -433,7 +433,7 @@
                 </div>
 
                 <div class="basic-item">
-                    <div class="brand-new-tag">Brand New</div>
+                    <div class="brand-new-tag">BRAND NEW</div>
                     <div class="status-tag">-65%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/sweaters/Lightweight Jacket.png" alt="">
@@ -452,7 +452,7 @@
                 </div>
 
                 <div class="basic-item">
-                    <div class="brand-new-tag">Brand New</div>
+                    <div class="brand-new-tag">BRAND NEW</div>
                     <div class="status-tag">-75%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/sweaters/Cat Sweater.png" alt="">
@@ -479,7 +479,7 @@
         <div class="tshirts-content">
             <div class="basic-items-container">
                 <div class="basic-item">
-                    <div class="new-tag">90% New</div>
+                    <div class="new-tag">90% NEW</div>
                     <div class="status-tag">-95%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/tshirts/Flash.png" alt="">
@@ -498,7 +498,7 @@
                 </div>
 
                 <div class="basic-item">
-                    <div class="new-tag">95% New</div>
+                    <div class="new-tag">95% NEW</div>
                     <div class="status-tag">-90%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/tshirts/Champion.png" alt="">
@@ -525,7 +525,7 @@
         <div class="others-content">
             <div class="basic-items-container">
                 <div class="basic-item">
-                    <div class="new-tag">70% New</div>
+                    <div class="new-tag">70% NEW</div>
                     <div class="status-tag">-80%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/others/Rice Cooker.png" alt="">
@@ -544,7 +544,7 @@
                 </div>
 
                 <div class="basic-item">
-                    <div class="new-tag">95% New</div>
+                    <div class="new-tag">95% NEW</div>
                     <div class="status-tag">-70%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/others/Light.png" alt="">
@@ -563,7 +563,7 @@
                 </div>
 
                 <div class="basic-item">
-                    <div class="new-tag">90% New</div>
+                    <div class="new-tag">90% NEW</div>
                     <div class="status-tag">-70%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/others/Pencil Sharpeners.png" alt="">
@@ -582,7 +582,7 @@
                 </div>
 
                 <div class="basic-item">
-                    <div class="new-tag">90% New</div>
+                    <div class="new-tag">90% NEW</div>
                     <div class="status-tag">-80%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/others/Hole Puncher.png" alt="">
@@ -601,7 +601,7 @@
                 </div>
 
                 <div class="basic-item">
-                    <div class="brand-new-tag">Brand New</div>
+                    <div class="brand-new-tag">BRAND NEW</div>
                     <div class="status-tag">-30%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/others/CATAN.png" alt="">
@@ -620,8 +620,8 @@
                 </div>
 
                 <div class="basic-item">
-                    <div class="new-tag">95% New</div>
-                    <div class="sold-tag">Sold Out</div>
+                    <div class="new-tag">95% NEW</div>
+                    <div class="sold-tag">SOLD</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/others/Tent.png" alt="">
                     </div>
