--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
                     </nav>
                 </div>
             </div>
-            <div class="header-btm">
+            <div class="header-btm slider">
+                <p>Please Message Below or Contact 204-730-3096 for More Details and Pick Up Arrangements</p>
                 <p>LIMITED TIME OFFER: Buy Any 2 Items and Get Additional 50% OFF on Your Third Item!!!</p>
+                <p>NOTE: All Items are Cleaned and Quality Checked! FIRST COME FIRST SERVE!</p>
+                <p>NOTE: User Login & Shoping Cart Functionalities will be Available Soon</p>
             </div>
         </div>
         <img id="home" src="images/Banner.png" alt="YC Thrift Banner">
