--- a/index.html
+++ b/index.html
@@ -389,26 +389,6 @@
                     </div>
                 </div>
 
-
-                <div class="basic-item">
-                    <div class="new-tag">60% NEW</div>
-                    <div class="status-tag">-90%</div>
-                    <div class="basic-img-container">
-                        <img src="images/shop-items/sports/Kawasaki E83.png" alt="">
-                    </div>
-                    <div class="basic-item-description">
-                        <div class="basic-item-title">KAWASAKI Power E83</div>
-                        <div class="basic-item-subtitle">Badminton Accessory</div>
-                        <div class="basic-item-price-container">
-                            <span class="discount-price">$19.99</span>
-                            <span class="original-price">$149.99</span>
-                        </div>
-                        <a href="error.html" class="buy-icon">
-                            <i class="bx bx-cart-alt"></i>
-                        </a>
-                    </div>
-                </div>
-
                 <div class="basic-item">
                     <div class="new-tag">85% NEW</div>
                     <div class="status-tag">-75%</div>
@@ -435,11 +415,30 @@
                         <img src="images/shop-items/sports/Head.png" alt="">
                     </div>
                     <div class="basic-item-description">
-                        <div class="basic-item-title">HEAD Badminton</div>
+                        <div class="basic-item-title">HEAD Power Helix</div>
                         <div class="basic-item-subtitle">Badminton Accessory</div>
                         <div class="basic-item-price-container">
                             <span class="discount-price">$29.99</span>
                             <span class="original-price">$69.99</span>
+                        </div>
+                        <a href="error.html" class="buy-icon">
+                            <i class="bx bx-cart-alt"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="basic-item">
+                    <div class="new-tag">60% NEW</div>
+                    <div class="status-tag">-90%</div>
+                    <div class="basic-img-container">
+                        <img src="images/shop-items/sports/Kawasaki E83.png" alt="">
+                    </div>
+                    <div class="basic-item-description">
+                        <div class="basic-item-title">KAWASAKI Power E83</div>
+                        <div class="basic-item-subtitle">Badminton Accessory</div>
+                        <div class="basic-item-price-container">
+                            <span class="discount-price">$19.99</span>
+                            <span class="original-price">$149.99</span>
                         </div>
                         <a href="error.html" class="buy-icon">
                             <i class="bx bx-cart-alt"></i>
@@ -531,7 +530,7 @@
                         <img src="images/shop-items/sports/Racket Cover5.png" alt="">
                     </div>
                     <div class="basic-item-description">
-                        <div class="basic-item-title">Large Racket Cover</div>
+                        <div class="basic-item-title">Extra Large Racket Cover</div>
                         <div class="basic-item-subtitle">Badminton Accessory</div>
                         <div class="basic-item-price-container">
                             <span class="discount-price">$13.99</span>
@@ -569,7 +568,7 @@
                         <img src="images/shop-items/sports/Racket Case2.png" alt="">
                     </div>
                     <div class="basic-item-description">
-                        <div class="basic-item-title">HEAD Large Racket Case</div>
+                        <div class="basic-item-title">Extra Large Racket Case</div>
                         <div class="basic-item-subtitle">Badminton Accessory</div>
                         <div class="basic-item-price-container">
                             <span class="discount-price">$4.99</span>
