--- a/index.html
+++ b/index.html
@@ -675,7 +675,6 @@
                     </div>
                 </div>
 
-
             </div>
         </div>
     </section>
@@ -685,6 +684,26 @@
         <h2 class="section-title">Hoodies & Sweaters</h2>
         <div class="sweaters-content">
             <div class="basic-items-container">
+
+                <div class="basic-item">
+                    <div class="new-tag">90% NEW</div>
+                    <div class="status-tag">-70%</div>
+                    <div class="basic-img-container">
+                        <img src="images/shop-items/sweaters/Mountain Ware.png" alt="">
+                    </div>
+                    <div class="basic-item-description">
+                        <div class="basic-item-title">Mountain Warehouse</div>
+                        <div class="basic-item-subtitle">Size S</div>
+                        <div class="basic-item-price-container">
+                            <span class="discount-price">$22.99</span>
+                            <span class="original-price">$74.99</span>
+                        </div>
+                        <a href="error.html" class="buy-icon">
+                            <i class="bx bx-cart-alt"></i>
+                        </a>
+                    </div>
+                </div>
+
                 <div class="basic-item">
                     <div class="new-tag">90% NEW</div>
                     <div class="status-tag">-80%</div>
@@ -695,8 +714,8 @@
                         <div class="basic-item-title">Black Rain Jacket</div>
                         <div class="basic-item-subtitle">Size S</div>
                         <div class="basic-item-price-container">
-                            <span class="discount-price">$4.99</span>
-                            <span class="original-price">$24.99</span>
+                            <span class="discount-price">$6.99</span>
+                            <span class="original-price">$31.99</span>
                         </div>
                         <a href="error.html" class="buy-icon">
                             <i class="bx bx-cart-alt"></i>
