--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
         <div class="sports-content">
             <div class="basic-items-container">
                 <div class="basic-item">
-                    <div class="brand-new-tag">BRAND NEW</div>
-                    <div class="status-tag">-45%</div>
+                    <div class="new-tag">95% NEW</div>
+                    <div class="status-tag">-60%</div>
                     <div class="basic-img-container">
                         <img src="images/shop-items/sports/Badminton Bag.png" alt="">
                     </div>
@@ -247,7 +247,7 @@
                         <div class="basic-item-title">YONEX Badminton Bag</div>
                         <div class="basic-item-subtitle">Badminton Accessory</div>
                         <div class="basic-item-price-container">
-                            <span class="discount-price">$49.99</span>
+                            <span class="discount-price">$35.99</span>
                             <span class="original-price">$89.99</span>
                         </div>
                         <a href="error.html" class="buy-icon">
