--- a/index.html
+++ b/index.html
@@ -257,6 +257,26 @@
                 </div>
 
                 <div class="basic-item">
+                    <div class="brand-new-tag">BRAND NEW</div>
+                    <div class="status-tag">-85%</div>
+                    <div class="basic-img-container">
+                        <img src="images/shop-items/sports/Towel.png" alt="">
+                    </div>
+                    <div class="basic-item-description">
+                        <div class="basic-item-title">YONEX Soft Towel</div>
+                        <div class="basic-item-subtitle">Badminton Accessory</div>
+                        <div class="basic-item-price-container">
+                            <span class="discount-price">$4.99</span>
+                            <span class="original-price">$29.99</span>
+                        </div>
+                        <a href="error.html" class="buy-icon">
+                            <i class="bx bx-cart-alt"></i>
+                        </a>
+                    </div>
+                </div>
+
+
+                <div class="basic-item">
                     <div class="new-tag">95% NEW</div>
                     <div class="sold-tag"">SOLD</div>
                     <div class="basic-img-container">
@@ -903,6 +923,25 @@
                         <div class="basic-item-price-container">
                             <span class="discount-price">$9.99</span>
                             <span class="original-price">$39.99</span>
+                        </div>
+                        <a href="error.html" class="buy-icon">
+                            <i class="bx bx-cart-alt"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="basic-item">
+                    <div class="brand-new-tag">BRAND NEW</div>
+                    <div class="status-tag">-75%</div>
+                    <div class="basic-img-container">
+                        <img src="images/shop-items/others/Panda.png" alt="">
+                    </div>
+                    <div class="basic-item-description">
+                        <div class="basic-item-title">Panda Woodcraft Kit</div>
+                        <div class="basic-item-subtitle">Wonderful Gift Ideas</div>
+                        <div class="basic-item-price-container">
+                            <span class="discount-price">$4.99</span>
+                            <span class="original-price">$19.99</span>
                         </div>
                         <a href="error.html" class="buy-icon">
                             <i class="bx bx-cart-alt"></i>
