--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>  
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <meta name="description" content="Welcome to YC Thrift Shop and Let's Start SAVING BIG Today! All Items are Cleaned and Quality Checked! FIRST COME FIRST SERVE!!!"> 
+  <meta name="keywords" content="YC Thrift, YC Graphixs, Thrift Store, Thrift Shop, Yuchen Gu"> 
+  <meta name="author" content="Yuchen Gu"> 
   <title>YC Thrift</title>  
   <link rel="stylesheet" href="style.css"> 
   <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
@@ -1103,7 +1106,7 @@
         <h2 class="section-title">Other Items</h2>
         <div class="others-content">
             <div class="basic-items-container">
-                
+
                 <div class="basic-item">
                     <div class="new-tag">70% NEW</div>
                     <div class="status-tag">-80%</div>
