--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head> 
 
 <body>
+
     <!-- Header Section -->
     <header class="header main-bg-color">
         <div class="header-content">
@@ -48,6 +49,7 @@
         </div>
         <img id="home" src="images/Banner.png" alt="YC Thrift Banner">
     </header>
+
 
     <!--Featured Section-->
     <section class="featured main-bg-color" id="featured">
@@ -254,6 +256,7 @@
             </div>    
         </div>
     </section>
+
 
     <!--Sports Section-->
     <section class="sports second-bg-color" id="sports">
@@ -721,6 +724,7 @@
         </div>
     </section>
 
+
     <!--Sweaters Section-->
     <section class="sweaters main-bg-color" id="sweaters">
         <h2 class="section-title">Hoodies & Sweaters</h2>
@@ -959,6 +963,7 @@
         </div>
     </section>
 
+
     <!--TShirts Section -->
     <section class="tshirts second-bg-color" id="tshirts">
         <h2 class="section-title">Tops & T-Shirts</h2>
@@ -985,8 +990,8 @@
                 </div>
 
                 <div class="basic-item">
-                    <div class="new-tag">95% NEW</div>
-                    <div class="status-tag">-65%</div>
+                    <div class="brand-new-tag">BRAND NEW</div>
+                    <div class="status-tag">-55%</div>
                     <div class="basic-img-container">
                         <img class="front-back-img" src="images/shop-items/tshirts/BF_Star_Shirt_Front.png" alt="" data-back-view="images/shop-items/tshirts/BF_Star_Shirt_Back.png">
                     </div>
@@ -994,7 +999,7 @@
                         <div class="basic-item-title">BF Star Supreme</div>
                         <div class="basic-item-subtitle">Size M</div>
                         <div class="basic-item-price-container">
-                            <span class="discount-price">$16.99</span>
+                            <span class="discount-price">$22.99</span>
                             <span class="original-price">$48.99</span>
                         </div>
                         <a href="error.html" class="buy-icon">
@@ -1102,8 +1107,9 @@
         </div>
     </section>
 
-     <!--Others Section-->
-     <section class="others main-bg-color" id="others">
+
+    <!--Others Section-->
+    <section class="others main-bg-color" id="others">
         <h2 class="section-title">Other Items</h2>
         <div class="others-content">
             <div class="basic-items-container">
@@ -1530,6 +1536,7 @@
         </div>
     </section>
 
+    
     <!--Contact Section-->
     <section class="contact second-bg-color" id="contact">
         <h2 class="contact-title">Contact <span>Me</span></h2>
