--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <meta name="description" content="Welcome to YC Thrift Shop and Let's Start SAVING BIG Today! All Items are Cleaned and Quality Checked! FIRST COME FIRST SERVE!!!"> 
-  <meta name="keywords" content="YC Thrift, YC Graphixs, Thrift Store, Thrift Shop, Yuchen Gu"> 
+  <meta name="keywords" content="YC Graphixs, YC Thrift Shop, Thrift Store, Thrift Shop, Yuchen Gu"> 
   <meta name="author" content="Yuchen Gu"> 
-  <meta name="google-site-verification" content="HRqf-NJBatqr5464hGL_rJ5oMLB4TKUHwZSZTi2WWWY"/>
-  <title>YC Thrift</title>  
+  <link rel="canonical" href="https://thriftshop.ycgraphixs.com/">
+  <title>YC Thrift Shop</title>  
   <link rel="stylesheet" href="style.css"> 
   <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
-  <link rel="icon" href="Images/guyuchen99.icon" type="image/x-icon">
+  <link rel="icon" href="images/guyuchen99.icon" type="image/x-icon">
 </head> 
-
 <body>
 
     <!-- Header Section -->
