--- a/index.html
+++ b/index.html
@@ -1597,15 +1597,16 @@
 
     <!-- Footer Section -->
     <footer>
-        <span id="laptop">Developed and Designed By <span>YC Graphixs</span> | <i class="bx bx-copyright"></i> 2024 All rights Reserved.</span>
+        <span id="laptop">Developed and Designed By <span><a href="https://ycgraphixs.com" target="_blank">YC Graphixs</a></span> | <i class="bx bx-copyright"></i> 2024 All rights Reserved.</span>
         <span id="phone">
-            <div>Developed and Designed By <span>YC Graphixs</span></div> 
+            <div>Developed and Designed By <span><a href="https://ycgraphixs.com" target="_blank">YC Graphixs</a></span></div> 
             <div><i class="bx bx-copyright"></i> 2024 All rights Reserved.</div>
         </span>
     </footer>
 
-     <!-- jQuery -->
-     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
     <!-- My JavaScript Code -->
     <script src="script.js"></script> 
